# test-subnet

./: .gitignore  AGENTS.md  README.md
.github/workflows/: build-validator.yml  release-miner.yml  release-validator.yml
docs/: index.html
envs/deployed/: docker-compose.yml
installer/: README.md  install.sh  update_compose.sh
knowledge/: guidelines.coding-and-qa.md  tasks.project-bootstrap.md  template.bootstrap.md
knowledge/bittensor/: INDEX.yaml  capacity_market.yaml  chutes.integration.yaml  compute_auction.yaml  data_indexing.yaml  design_flow.yaml  example.404gen_sn17.yaml  example.bitmind_sn34.yaml  example.gradients_sn56.yaml  example.kinitro_sn26.yaml  example.lium_sn51.yaml  example.nova_sn68.yaml  example.numinous_sn6.yaml  example.zeus_sn18.yaml  incentive.primitives.yaml  miner.contract.yaml  miner.rules.yaml  prediction_market.yaml  sdk.quick_reference.yaml  subnet.invariants.yaml  time_series_forecasting.yaml  validator.contract.yaml  validator.rules.yaml
knowledge/localnet/: INDEX.md  localnet.adapting-to-subnet.md  localnet.miner-fixtures.md
localnet/: .env.example  README.md  bootstrap.py  compose.yml  run-in-tmux.sh  stop-tmux.sh
localnet/miners/: miner.template.py
miner/: CHANGELOG.md  miner.py  pyproject.toml
validator/: .dockerignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
validator/src/validator/: main.py  payload.py  response_logger.py
