[project]
name = "validator"
version = "0.2.0"
description = "Nexus-based Bittensor subnet validator."
requires-python = ">=3.14"
dependencies = [
    "attrs>=26.1.0",
    "bittensor-nexus-library",
    "click>=8.3.2",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
validator = "validator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
bittensor-nexus-library = { git = "https://github.com/bittensor-church/bittensor-nexus-library.git", branch = "kb" }


[tool.commitizen]
name = "impacts_cz"
version_provider = "pep621"
tag_format = "validator-v$version"
annotated_tag = true
changelog_file = "CHANGELOG.md"
update_changelog_on_bump = true
changelog_merge_prerelease = true
bump_message = "bump: validator $current_version -> $new_version"
impacts = ["validator"]
major_version_zero = true
[dependency-groups]
dev = [
    "basedpyright>=1.36.1",
    "ruff",
    "pytest",
    "polyfactory",
    "release-toolkit>=0.2.1,<1",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "TC005"]
preview = true
explicit-preview-rules = true
extend-select = ["DOC501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["I", "F401"]

[tool.pytest.ini_options]
filterwarnings = [
    "error::pytest.PytestUnhandledThreadExceptionWarning",
]

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["src", "tests"]
verboseOutput = true
useLibraryCodeForTypes = true
reportMissingTypeStubs = "warning"
reportUndefinedVariable = "error"
reportUnusedImport = "warning"
reportExplicitAny = "none"
venvPath = "."
venv = ".venv"
extraPaths = ["src", ".venv/lib/python3.14/site-packages"]
